--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                     <span class="footer__center"><a href="https://www.johvig.ee/" style="color:white;" target="_blank">Jõhvi Gümnaasium</a></span>
                 </div>
                 <div class="footer__column">
-                    <span class="footer__right"><a href="Info.html" style="color: white;">Sõnastikust</a></span>
+                    <span class="footer__right"><a href="about.html" style="color: white;">Sõnastikust</a></span>
                     <!-- <span class="footer__right">Teatage veast sellele e-posti aadressile:<br><a href="mailto:maksiprohhorov@gmail.com">maksiprohhorov@gmail.com</a><br></span> -->
                 </div>
             </div>
         </footer>
     </body>
 </html>
+
