--- a/about.html
+++ b/about.html
@@ -6,17 +6,24 @@
     <link rel="stylesheet" href="design.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-    <body>
+    <body class="abt">
         <header style="width: 100%">
             <h1 class="title">Eesti-Vene matemaatikasõnastik</h1>
            <!-- <a href="https://www.johvig.ee/" target="_blank">
                 <img src="images\johvi-gymnaasium.png" alt="Jõhvi Gümnaasium" class="logo">
             </a> -->
         </header>
-        <divc class>
-            
+        <div class="abt">
+            <h2>Sõnastikust</h2>
+            <p>Veebipõhine Eesti-Vene matemaatikasõnastik on loodud Jõhvi Gümnaasiumi lõpetaja Liudmila Afonskaja praktilise töö põhjal. (Людмила Афонская. (2024). ПРОВЕДЕНИЕ УРОКОВ МАТЕМАТИКИ ДЛЯ УЧАЩИХСЯ 9 КЛАССОВ С ИСПОЛЬЗОВАНИЕМ СЛОВАРЕЙ НА РУССКО-ЭСТОНСКОМ ЯЗЫКЕ)</p>
+            <p>Sõnastik sisaldab enam kui 220 matemaatikatermini, mida saab otsida nii eesti kui vene keeles.</p>
+            <p>Eesmärgiks on luua mugav matemaatiline veebisõnastik, mis aitaks igal gümnaasiumiõpilasel matemaatikat õppida ning aidata gümnaasiumil toetada oma õpilasi, kellel on probleeme eesti keeles õppimisega.</p>
+            <p>Teatage vigadest sellele e-posti aadressile: <br>
+            <a href="mailto:maksiprohhorov@gmail.com">maksiprohhorov@gmail.com</a>
+            </p>
+            <p>Veebisõnastiku autor: Maksim Prohhorov</p>
         </div>
-        <footer>
+        <footer class="abt">
             <div class="footer__grid">
                 <div class="footer__column">
                     <span class="footer__right"><a href="index.html" style="color: white;">Tagasi</a></span>
