Fix HTML structure and footer class
Signed-off-by: ByByts <maksiprohhorov@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <h3 id="print"></h3>
         <script src="script.js"></script>
-        <footer>
+        <footer class="main">
             <div class="footer__grid">
                 <div class="footer__column">
                     <span class="footer__left">Maksim Prohhorov 11.d</span>
@@ -40,4 +40,3 @@
         </footer>
     </body>
 </html>
-
