Update about.html with new header image
Signed-off-by: ByByts <maksiprohhorov@gmail.com>

--- a/about.html
+++ b/about.html
@@ -9,10 +9,11 @@
     <body class="abt">
         <header style="width: 100%">
             <h1 class="title">Eesti-Vene matemaatikasõnastik</h1>
-           <!-- <a href="https://www.johvig.ee/" target="_blank">
-                <img src="images\johvi-gymnaasium.png" alt="Jõhvi Gümnaasium" class="logo">
-            </a> -->
+           <a href="https://www.johvig.ee/" target="_blank">
+                <img src="images\õpilaskond.png" alt="Jõhvi Gümnaasium" class="logo">
+            </a>
         </header>
+        <hr>
         <div class="abt">
             <h2>Sõnastikust</h2>
             <p>Veebipõhine Eesti-Vene matemaatikasõnastik on loodud Jõhvi Gümnaasiumi lõpetaja Liudmila Afonskaja praktilise töö põhjal. (Людмила Афонская. (2024). ПРОВЕДЕНИЕ УРОКОВ МАТЕМАТИКИ ДЛЯ УЧАЩИХСЯ 9 КЛАССОВ С ИСПОЛЬЗОВАНИЕМ СЛОВАРЕЙ НА РУССКО-ЭСТОНСКОМ ЯЗЫКЕ)</p>
