--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <header style="width: 100%">
             <h1 class="title">Eesti-Vene matemaatikasõnastik</h1>
-           <!-- <a href="https://www.johvig.ee/" target="_blank">
-                <img src="images\johvi-gymnaasium.png" alt="Jõhvi Gümnaasium" class="logo">
-            </a> -->
+           <a href="https://www.johvig.ee/" target="_blank">
+                <img src="images\õpilaskond.png" alt="Jõhvi Gümnaasium" class="logo">
+            </a> 
         </header>
         <hr>
         <div class="searchbox">
@@ -20,7 +20,7 @@
                 <input class="input" id="searchinput" type="text" size="24" placeholder="Otsi tundmatute sõnade tõlkeid"></input>
                 <ul id="suggestions" class="suggestions"></ul>
             </div>
-            <button class="button" id="searchbtn" type="button" onclick="searchWord()"><img src="images/109164.png" alt="Otsi" width="20px" height="20px"></button>
+            <button class="button" id="searchbtn" type="button"><img src="images/109164.png" alt="Otsi" width="20px" height="20px"></button>
         </div>
         <h3 id="print"></h3>
         <script src="script.js"></script>
@@ -34,7 +34,6 @@
                 </div>
                 <div class="footer__column">
                     <span class="footer__right"><a href="about.html" style="color: white;">Sõnastikust</a></span>
-                    <!-- <span class="footer__right">Teatage veast sellele e-posti aadressile:<br><a href="mailto:maksiprohhorov@gmail.com">maksiprohhorov@gmail.com</a><br></span> -->
                 </div>
             </div>
         </footer>
