--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="et">
 <head>
     <title>Maksim Prohhorov UPT</title>
-    <link rel="icon" type="image/x-icon" href="/images/ico.ico">
+    <link rel="icon" type="image/x-icon" href="images/ico.ico">
     <link rel="stylesheet" href="design.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -10,7 +10,7 @@
         <header style="width: 100%">
             <h1 class="title">Eesti-Vene matemaatikasõnastik</h1>
            <a href="https://www.johvig.ee/" target="_blank">
-                <img src="images\õpilaskond.png" alt="Jõhvi Gümnaasium" class="logo">
+                <img src="images/õpilaskond.png" alt="Jõhvi Gümnaasium" class="logo">
             </a> 
         </header>
         <hr>
@@ -39,3 +39,4 @@
         </footer>
     </body>
 </html>
+
