Update about.html with new favicon and content
Signed-off-by: ByByts <maksiprohhorov@gmail.com>

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="et">
 <head>
     <title>Maksim Prohhorov UPT</title>
-    <link rel="icon" type="image/x-icon" href="/images/ico.ico">
+    <link rel="icon" type="image/x-icon" href="images/õpilaskond.ico">
     <link rel="stylesheet" href="design.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -33,3 +33,4 @@
         </footer>
     </body>
 </html>
+
