Fix spelling of 'Ljudmila' in about.html
Corrected the spelling of 'Liudmila' to 'Ljudmila' in the dictionary description.

Signed-off-by: ByByts <maksiprohhorov@gmail.com>

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <hr>
         <div class="abt">
             <h2>Sõnastikust</h2>
-            <p>Veebipõhine Eesti-Vene matemaatikasõnastik on loodud Jõhvi Gümnaasiumi lõpetaja Liudmila Afonskaja praktilise töö põhjal. (Людмила Афонская. (2024). ПРОВЕДЕНИЕ УРОКОВ МАТЕМАТИКИ ДЛЯ УЧАЩИХСЯ 9 КЛАССОВ С ИСПОЛЬЗОВАНИЕМ СЛОВАРЕЙ НА РУССКО-ЭСТОНСКОМ ЯЗЫКЕ)</p>
+            <p>Veebipõhine Eesti-Vene matemaatikasõnastik on loodud Jõhvi Gümnaasiumi lõpetaja Ljudmila Afonskaja praktilise töö põhjal. (Людмила Афонская. (2024). ПРОВЕДЕНИЕ УРОКОВ МАТЕМАТИКИ ДЛЯ УЧАЩИХСЯ 9 КЛАССОВ С ИСПОЛЬЗОВАНИЕМ СЛОВАРЕЙ НА РУССКО-ЭСТОНСКОМ ЯЗЫКЕ)</p>
             <p>Sõnastik sisaldab enam kui 220 matemaatikatermini, mida saab otsida nii eesti kui vene keeles.</p>
             <p>Eesmärgiks on luua mugav matemaatiline veebisõnastik, mis aitaks igal gümnaasiumiõpilasel matemaatikat õppida ning aidata gümnaasiumil toetada oma õpilasi, kellel on probleeme eesti keeles õppimisega.</p>
             <p>Teatage vigadest sellele e-posti aadressile: <br>
@@ -33,4 +33,5 @@
         </footer>
     </body>
 </html>
+
 
